metadata: Fix typo in extension description
It’s shown in the ‘Extensions’ GNOME app (if the user installs that).

Signed-off-by: Philip Withnall <withnall@endlessm.com>

--- a/metadata.json.in
+++ b/metadata.json.in
@@ -1,7 +1,7 @@
 {
 "uuid": "@uuid@",
 "name": "Hack",
-"description": "Add a the flip to hack experience to the desktop",
+"description": "Add the Flip to Hack experience to the desktop",
 "settings-schema": "@settings_schema@",
 "shell-version": ["@shell_version@"],
 "url": "https://github.com/endlessm/eos-hack-extension"
