hackfx: Add code_view_effect
This patch adds a new C library to the project, hackfx. This library
will have clutter effect that are used in the extension and right now
are in the gnome-shell endless branch.

This first commit copies the shell_code_view_effect class from the shell
here and it's renamed to hackfx_code_view_effect.

https://phabricator.endlessm.com/T30450

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
-project('hack-extension',
+project('hack-extension', 'c',
   version: '3.8.0',
-  meson_version: '>= 0.40.0'
+  meson_version: '>= 0.47.0'
 )
 
 sources = [
@@ -106,3 +106,5 @@ if extension_tool.found()
 
   run_target('zip-file', command: command)
 endif
+
+subdir('src')
