Add schemas and migration folders to dist_files

--- a/meson.build
+++ b/meson.build
@@ -12,7 +12,7 @@ extra_sources = [
   'COPYING',
 ]
 dist_files = sources + extra_sources
-dist_files += ['ui', 'misc', 'data']
+dist_files += ['ui', 'misc', 'data', 'schemas', 'migration']
 
 i18n = import('i18n')
 subdir('locale')
