--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,5 @@
 project('hack-extension',
-  version: '3.38.0',
+  version: '41',
   meson_version: '>= 0.40.0'
 )
 
@@ -27,13 +27,6 @@ schemas = ['org.endlessos.hack-extension']
 
 uuid = 'eos-hack@endlessos.org'
 
-ver_arr = meson.project_version().split('.')
-if ver_arr[1].to_int().is_even()
-  shell_version = '@0@.@1@'.format(ver_arr[0], ver_arr[1])
-else
-  shell_version = '.'.join(ver_arr)
-endif
-
 datadir = get_option('datadir')
 extensiondir = join_paths(datadir, 'gnome-shell', 'extensions')
 schemadir = join_paths(extensiondir, uuid, 'schemas')
@@ -43,7 +36,7 @@ have_schemas = schemas.length() > 0
 metaconf = configuration_data()
 metaconf.set('uuid', uuid)
 metaconf.set('version', 1)
-metaconf.set('shell_version', shell_version)
+metaconf.set('shell_version', meson.project_version())
 if have_schemas
   metaconf.set('settings_schema', schemas[0])
 endif
